fix: Fix for popover positioning when parent changes dimensions

--- a/src/Components/Datepicker.html
+++ b/src/Components/Datepicker.html
@@ -223,6 +223,7 @@
           month,
           year
         });
+        this.refs.popover.reposition(); 
       },
       incrementDay(amount) { 
         let { selected, visibleMonth, firstVisibleDate, lastVisibleDate } = this.get();
@@ -231,6 +232,7 @@
         if(amount > 0 && selected > lastVisibleDate) return this.incrementMonth(1,selected.getDate()); 
         if(amount < 0 && selected < firstVisibleDate) return this.incrementMonth(-1,selected.getDate());
         this.set({selected});
+        this.refs.popover.reposition(); 
       }, 
       handleKeyPress(evt) { 
         if(keyCodesArray.indexOf(evt.keyCode) == -1) return; 
