--- a/src/Components/NavBar.html
+++ b/src/Components/NavBar.html
@@ -60,15 +60,15 @@
   }
   .month-selector--month { 
     width: 31.333%; 
-    margin: 1%; 
+    margin: .5%; 
     height: 23%;
     display: inline-block;
-    border: 2px solid #eee;
     color: #4a4a4a;
+    border: 1px solid #efefef;
   }
   .month-selector--month:hover { 
-    border-color: #f7901e;
     cursor: pointer;
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.15);
   }
   .month-selector--month.selected { 
     background: #f7901e;
