--- a/src/Components/Datepicker.html
+++ b/src/Components/Datepicker.html
@@ -50,7 +50,7 @@
     overflow: visible;
   }
 
-  .datepicker:before { 
+  /* .datepicker:before { 
     content: '';
     visibility: hidden;
     position: fixed;
@@ -72,7 +72,7 @@
   .datepicker.closing:before { 
     visibility: hidden;
     opacity: 0; 
-  }
+  } */
 
   .calendar-button { 
     padding: 10px 20px;
