--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -55,7 +55,7 @@
     width: 100%;
     position: relative;
     border: 1px solid #fff;
-    border-radius: 5px; 
+    border-radius: 50%; 
     margin: 10%;
     padding: 0;
     align-items: center;
