allow start and end ranges

--- a/src/Components/Datepicker.html
+++ b/src/Components/Datepicker.html
@@ -34,6 +34,8 @@
         <Month 
           {visibleMonth}
           {selected}
+          {start}
+          {end}
           on:dateSelected="registerSelection(event)"
         />
       </div>
