--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -4,11 +4,12 @@
       class="day" 
       class:outside-month="!day.partOfMonth"
       class:is-today="day.isToday"
-      on:click="fire('dateSelected',day.date)"
     >
       <button 
         class="day--label" 
-        class:selected="datesAreSameDay(day.date,selected) === true"
+        class:selected="datesAreSameDay(day.date,selected)"
+        on:click="fire('dateSelected',day.date)"
+        disabled="{isBefore(start, day.date) || isAfter(end, day.date)}"
       >
         {day.date.getDate()}
       </button>
@@ -87,7 +88,13 @@
         return a.getDate() == b.getDate() 
           && a.getMonth() == b.getMonth()
           && a.getFullYear() == b.getFullYear()
-      }
+      },
+      isBefore (start, day) {
+        return day < start
+      },
+      isAfter (end, day) {
+        return day > end
+      },
     }
   }
 </script>
