--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -4,12 +4,13 @@
       class="day" 
       class:outside-month="!day.partOfMonth"
       class:is-today="day.isToday"
+      class:is-disabled="!day.selectable"
     >
       <button 
         class="day--label" 
         class:selected="datesAreSameDay(day.date,selected)"
         on:click="fire('dateSelected',day.date)"
-        disabled="{!isDaySelectable(day.date, start, end)}"
+        disabled="{!day.selectable}"
       >
         {day.date.getDate()}
       </button>
@@ -39,9 +40,9 @@
     height: auto;
     display: flex; 
     flex-basis: 0;
-    cursor: pointer;
   }
-  .day.outside-month { 
+  .day.outside-month, 
+  .day.is-disabled { 
     opacity: 0.5;
   }
   .day:before { 
@@ -64,17 +65,20 @@
     cursor: pointer;
     transition: all 100ms linear;
   }
-  .day:hover .day--label { 
+  .day--label[disabled] { 
+    cursor: not-allowed;
+  }
+  .day--label:not([disabled]):hover { 
     background: #efefef;
     border-color: #efefef;
   }
-  .day:hover .day--label.selected,
+  .day--label.selected:hover,
   .day--label.selected { 
     border-color: #f7901e;
     background: none;
   }
   .day.is-today .day--label, 
-  .day.is-today:hover .day--label { 
+  .day.is-today .day--label:hover { 
     color: #fff;
     opacity: 1; 
     background: #f7901e;
@@ -82,16 +86,13 @@
 </style>
 
 <script>
-  import { isDaySelectable } from './lib/helpers'
-
   export default { 
     helpers: { 
       datesAreSameDay(a,b) {
         return a.getDate() == b.getDate() 
           && a.getMonth() == b.getMonth()
           && a.getFullYear() == b.getFullYear()
-      },
-      isDaySelectable
+      }
     }
   }
 </script>
