fix: use default cursor instead of not-allowed for disabled days

--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -66,7 +66,7 @@
     transition: all 100ms linear;
   }
   .day--label[disabled] { 
-    cursor: not-allowed;
+    cursor: default;
   }
   .day--label:not([disabled]):hover { 
     background: #efefef;
