--- a/src/Components/Month.html
+++ b/src/Components/Month.html
@@ -15,10 +15,11 @@
 <style>
   .month-container { 
     width: 100%;
-    white-space: nowrap;
+    /* white-space: nowrap;
     display: inline-block;
     height: 275px;
-    overflow: hidden;
+    overflow: hidden; */
+    display: grid;
   }
 </style>
 
