--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -1,4 +1,8 @@
-<div class="week">
+<div 
+  class="week" 
+  in:fly="{x:direction*50, duration: 180, delay: 90}" 
+  out:fade="{duration: 180}"
+>
   {#each days as day}
     <div 
       class="day" 
@@ -19,7 +23,6 @@
     </div>
   {/each}
 </div>
-
 <style>
   .week { 
     padding: 0;
@@ -31,6 +34,25 @@
     display: flex;
     -webkit-flex-flow: row;
     justify-content: space-around;
+    grid-column: 1; 
+  }
+  .week:nth-child(6n + 1) { 
+    grid-row: 1; 
+  }
+  .week:nth-child(6n + 2) { 
+    grid-row: 2; 
+  }
+  .week:nth-child(6n + 3) { 
+    grid-row: 3; 
+  }
+  .week:nth-child(6n + 4) { 
+    grid-row: 4; 
+  }
+  .week:nth-child(6n + 5) { 
+    grid-row: 5; 
+  }
+  .week:nth-child(6n + 6) { 
+    grid-row: 6; 
   }
   .day { 
     margin: 2px;
@@ -66,6 +88,7 @@
     background: none;
     cursor: pointer;
     transition: all 100ms linear;
+    font-weight: normal;
   }
   .day--label.disabled { 
     cursor: default;
@@ -81,14 +104,16 @@
   .day--label.selected:hover,
   .day--label.selected,
   .day--label:active:not(.disabled) { 
+    background-color: #f7901e;
     border-color: #f7901e;
-    background: none;
+    color: #fff;
   }
   .day.is-today .day--label, 
   .day.is-today .day--label:hover { 
-    color: #fff;
     opacity: 1; 
-    background: #f7901e;
+    background: none;
+    border-color: #f7901e;
+    color: #000;
   }
 
   @keyframes shake {
@@ -103,9 +128,14 @@
 
 <script>
   import { areDatesEquivalent } from './lib/helpers';
+  import { fly, fade } from 'svelte-transitions';
+
+  let lastMonthId = 0; 
+
   export default { 
     helpers: { 
       areDatesEquivalent
-    }
+    },
+    transitions: { fly, fade } 
   }
 </script>
