[fix] disable 'shadowbox' on mobile - bring back as an option/prop

--- a/src/Components/Datepicker.html
+++ b/src/Components/Datepicker.html
@@ -57,7 +57,7 @@
     overflow: visible;
   }
 
-  @media (max-width: 480px) { 
+  /* @media (max-width: 480px) { 
     .datepicker:before { 
       content: '';
       visibility: hidden;
@@ -81,7 +81,7 @@
       visibility: hidden;
       opacity: 0; 
     } 
-  }
+  } */
   
   .calendar-button { 
     padding: 10px 20px;
